--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                     </label>
                                 </div>
                                 <div class="form-check m-2 fs-4">
-                                    <input class="form-check-input pitsa35" value="35sm" type="radio"
+                                    <input class="form-check-input sm35" value="35sm" type="radio"
                                         name="flexRadioDefault" id="flexRadioDefault2">
                                     <label class="form-check-label" for="flexRadioDefault2">
                                         35sm
